wip -- proc error transparency [skip ci]